# model_viewer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  readme.me  std_pch.h
.github/workflows/: cmake-multi-platform.yml
.run/: model_viewer.run.xml  model_viewer_doc.run.xml  model_viewer_dx.run.xml  model_viewer_dx_doc.run.xml  model_viewer_gl.run.xml  model_viewer_gl_doc.run.xml
Shaders/: basic.hlsl  texture.hlsl  texture_cube.hlsl
libs/assimp/: CMakeLists.txt
libs/assimp/code/: CMakeLists.txt
libs/glew/: CMakeLists.txt
libs/glew/doc/: log.html
libs/glfw/docs/: moving.dox
libs/glfw/docs/html/: files.html  modules.html  moving_guide.html  pages.html
libs/glfw/src/: input.c
libs/glm/: CMakeLists.txt  ext.hpp
libs/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
libs/glm/gtc/: matrix_transform.hpp
libs/glm/gtx/: transform.hpp
libs/imgui/: CMakeLists.txt
libs/imgui/core/: imgui_demo.cpp
libs/imgui/dx/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_impl_win32.h
libs/imgui/gl/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
libs/include/: ReadImage.h
res/models/complex/: imgui.ini  monkey.fbx
res/models/complex/backpack/: backpack.mtl
res/models/primitives/: cube.fbx  cylinder.fbx  cylinder.stl  plane.fbx  sphere.fbx  sphere.stl
res/shaders/dx/: lines.hlsl  phong.hlsl  sample.hlsl  skybox.hlsl
res/shaders/include/: light.glsl  shadows.glsl
res/shaders/sample/: lines_vert.glsl  normal_map_frag.glsl  normal_map_vert.glsl  phong_frag.glsl  phong_gouraud_frag.glsl  phong_gouraud_vert.glsl  phong_phong_frag.glsl  phong_phong_normal_map_frag.glsl  phong_phong_normal_map_frag_2.glsl  phong_phong_normal_map_vert.glsl  phong_phong_normal_map_vert_2.glsl  phong_phong_parallex_mapping_frag.glsl  phong_phong_vert.glsl  sample_frag.glsl  sample_vert.glsl  simple_depth_frag.glsl  simple_depth_vert.glsl  skybox_vert.glsl  static_test_vert.glsl
res/textures/: uv_checker.dds
src/: mesh_asset.h  model_asset.cpp  model_asset.h  model_loader.cpp  model_loader.h  render.cpp  render.h  renderObject.cpp  renderObject.h  renderScene.cpp  renderScene.h  shader_asset.cpp  shader_asset.h  shader_loader.cpp  shader_loader.h  shader_program.cpp  shader_program.h  shaderasset.cpp  shaderasset.h  shaderloader.cpp  shaderloader.h  texture.cpp  texture.h  texture_asset.cpp  texture_loader.cpp  texture_loader.h  window.cpp  window.h
src/common/: aabb.cpp  aabb.h  quaternion.cpp  quaternion.h  stopwatch.cpp  stopwatch.h  string_util.cpp  string_util.h  transform.cpp  transform.h
src/debug/: renderdoc.cpp  renderdoc.h  tracer.h
src/dx12/: BoxApp.cpp  d3dApp.cpp
src/dx12_sample/: BoxApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
src/error/: not_implemented_error.h
src/render/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  frustum_perspective.cpp  frustum_perspective.h  gfx_device.h  gfx_device_dx.cpp  gfx_device_dx.h  gfx_device_gl.cpp  gfx_device_gl.h  index_buffer.cpp  index_buffer.h  light_directional.cpp  light_directional.h  light_point.h  light_spot.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  model_platform_buffer.cpp  model_platform_buffer.h  model_platform_immediate.cpp  model_platform_immediate.h  object_factory.cpp  object_factory.h  object_renderer.cpp  object_renderer.h  render_object.cpp  render_object.h  render_scene.cpp  render_scene.h  renderable.h  renderer_forward.cpp  renderer_forward.h  renderer_pipeline.h  renderer_simple.cpp  (+22 more)
src/render/dx/: buffer_constant_dx.h  buffer_constant_generic_dx.h  buffer_vertex_dx.cpp  buffer_vertex_dx.h  descriptor_heap.cpp  descriptor_heap.h  dx_util.cpp  dx_util.h  framebuffer_dx.cpp  framebuffer_dx.h  gfx_device_dx.cpp  gfx_device_dx.h  mesh_dx.cpp  mesh_dx.h  shader_constant.h  shader_dx.cpp  shader_dx.h  shader_program_dx.cpp  shader_program_dx.h  texture_2D_dx.cpp  texture_2D_dx.h  texture_cube_dx.cpp  texture_cube_dx.h  texture_dx.cpp  texture_dx.h  uniform_buffer_dx.cpp  uniform_buffer_dx.h
src/render/gl/: framebuffer.h  framebuffer_gl.cpp  framebuffer_gl.h  gfx_device_gl.cpp  gfx_device_gl.h  index_buffer.h  mesh.cpp  mesh.h  mesh_gl.cpp  mesh_gl.h  shader.h  shader_gl.cpp  shader_gl.h  shader_program.h  shader_program_gl.cpp  shader_program_gl.h  texture_2D.cpp  texture_2D.h  texture_2D_array_gl.cpp  texture_2D_array_gl.h  texture_2D_gl.cpp  texture_2D_gl.h  texture_cube.cpp  texture_cube.h  texture_cube_gl.cpp  texture_cube_gl.h  texture_format.cpp  texture_format.h  texture_gl.h  uniform_buffer_gl.cpp  uniform_buffer_gl.h  vertex_array.cpp  vertex_buffer.h
src/resource/: literals.h  material.h  mesh_asset.cpp  mesh_asset.h  mesh_loader.cpp  mesh_loader.h  model_info.h  model_loader.cpp  model_loader.h  shader_asset.cpp  shader_asset.h  shader_loader.cpp  shader_loader.h  texture_asset.cpp  texture_asset.h  texture_loader.cpp  texture_loader.h
src/window/: file_picker_windows.cpp  file_picker_windows.h  modelviewer_app.cpp  modelviewer_app.h  modelviewer_window.cpp  modelviewer_window.h  renderdoc.cpp  renderdoc.h  window.cpp  window.h  window_dx12.cpp  window_dx12.h  window_gl.cpp  window_gl.h  window_glfw.cpp  window_glfw.h  window_win32.cpp  window_win32.h
src/window/dx/: window_win32.cpp  window_win32.h
src/window/gl/: window_glfw.cpp  window_glfw.h
(+14 files in other folders)
