project(imgui)
file(GLOB_RECURSE SRC_CORE_FILES core/*)
if (dx_12)
    file(GLOB_RECURSE SRC_API_FILES dx/*)
else ()
    file(GLOB_RECURSE SRC_API_FILES gl/*)
endif ()

add_library(imgui STATIC ${SRC_CORE_FILES} ${SRC_API_FILES})
if (dx_12)
else ()
    target_link_libraries(imgui PRIVATE glfw)
endif ()
